# trainlist

./: .env.example  .gitignore  README.md  listings.yaml  pyproject.toml
.claude/: settings.local.json
deploy/: deploy.sh  trainlist-collector.service  trainlist-web.service
docs/superpowers/plans/: 2026-07-23-trainlist.md
docs/superpowers/specs/: 2026-07-23-trainlist-design.md
tests/: conftest.py  test_daemon.py  test_db.py  test_matcher.py  test_parser.py  test_seed.py  test_stats.py  test_store.py  test_times.py  test_web.py
tests/fixtures/: cancel.xml  malformed.xml  schedule.xml  ts.xml
trainlist/: db.py  seed.py  stats.py  times.py  webapp.py
trainlist/collector/: daemon.py  matcher.py  parser.py  store.py
trainlist/static/: style.css
trainlist/templates/: index.html
