[project]
name = "trainlist"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "gunicorn>=21",
    "PyYAML>=6",
    "stomp.py>=8",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["trainlist*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
